cambio enlaces de paginas

--- a/css/index.css
+++ b/css/index.css
@@ -17,10 +17,15 @@ body{
     color: #ebebeb;
 }
 
+.navbar-brand{
+    align-items: center;
+}
+
 .nav-item {
     font-family: 'Montserrat', sans-serif;
     color: #ebebeb;
 }
+
 
 
 
