--- a/css/index.css
+++ b/css/index.css
@@ -8,8 +8,13 @@ body{
     background-color: #ebebeb;
     margin: 0;
     padding: 0;
-    font-family:'Montserrat', sans-serif;
+    font-family:'Montserrat', sans-serif !important;
     overflow: visible;
+}
+
+.nav-link {
+    color: #ebebeb !important;
+    font-family:'Montserrat', sans-serif;
 }
 
 .navbar {
@@ -26,6 +31,11 @@ body{
     color: #ebebeb;
 }
 
+h1{
+    text-align: center;
+    font-weight: 800;
+    color: #333;
+}
 
 
 
