--- a/css/index.css
+++ b/css/index.css
@@ -37,6 +37,17 @@ h1{
     color: #333;
 }
 
+#descuento {
+    background-color: red;
+    color: #ebebeb;
+    text-align: center;
+    font-size: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    font-weight: 800;
+}
 
 
 /*Footer*/
