--- a/css/mujeres.css
+++ b/css/mujeres.css
@@ -31,13 +31,10 @@ body{
     color: #ebebeb;
 }
 
-#seccionhombres{
+h1{
     text-align: center;
     font-weight: 800;
-    font-size: 4rem;
     color: #333;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
 }
 
 .card-text{
@@ -136,4 +133,3 @@ footer {
 .footer-bottom p {
     font-size: 14px;
 }
-
