--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,9 +1,20 @@
-body{
+* {
+    padding: 0;
+    margin: 0;
+}
+
+
+body {
     background-color: #ebebeb;
     margin: 0;
     padding: 0;
-    font-family:'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif !important;
     overflow: visible;
+}
+
+.nav-link {
+    color: #ebebeb !important;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .navbar {
@@ -11,40 +22,38 @@ body{
     color: #ebebeb;
 }
 
+.navbar-brand {
+    align-items: center;
+}
+
 .nav-item {
     font-family: 'Montserrat', sans-serif;
     color: #ebebeb;
 }
 
-/*header*/
-header {
-    background-color: #333;
-    width: 100%;
-    height: 80px;
-    /*background-color: #454444;*/
-    /*color: #ebebeb;*/
-    display: inline-block;
-    /*display: flex;*/
-    justify-content: space-between;
-}
 
-nav {
-    /*display: flex;*/
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1rem;
-    font-weight: 100;
-    margin: 0 2%;
-}
-
-nav > div{
+nav>div {
     display: inline-block;
 }
 
 .contenedormenu {
     width: 40%;
     height: 100%;
+}
+
+#contacto {
+    text-align: center;
+    font-weight: 800;
+    font-size: 4rem;
+    color: #333;
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+}
+
+#titulocontacto {
+    font-weight: 600;
+    font-size: 4rem;
+    color: #333;
 }
 
 .logo {
@@ -58,7 +67,7 @@ nav > div{
     list-style: none;
     padding: 0;
     margin: 0;
-    /*display: flex;*/
+    display: flex;
 }
 
 .menu li {
@@ -84,7 +93,7 @@ nav > div{
 }
 
 .icons {
-    /*display: flex;*/
+    display: flex;
     display: inline-block;
     align-items: center;
     width: 40%;
@@ -93,12 +102,15 @@ nav > div{
 }
 
 .icons i {
-    font-size: 20px; /* Tamaño de los íconos */
-    margin-left: 45px; /* Espacio entre los íconos */
-    color: #ebebeb; /* Color de los íconos */
+    font-size: 20px;
+    /* Tamaño de los íconos */
+    margin-left: 45px;
+    /* Espacio entre los íconos */
+    color: #ebebeb;
+    /* Color de los íconos */
 }
 
-h1{
+h1 {
     color: #333;
     text-align: center;
     padding: 400 0 400 0;
@@ -112,7 +124,7 @@ footer {
     padding: 40px 0;
 }
 
-.footer-social i{
+.footer-social i {
     color: #ebebeb;
 }
 
