actualización de los iconos y logo en formato svg

--- a/css/index.css
+++ b/css/index.css
@@ -4,17 +4,17 @@
 }
 
 
-body{
+body {
     background-color: #ebebeb;
     margin: 0;
     padding: 0;
-    font-family:'Montserrat', sans-serif !important;
+    font-family: 'Montserrat', sans-serif !important;
     overflow: visible;
 }
 
 .nav-link {
     color: #ebebeb !important;
-    font-family:'Montserrat', sans-serif;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .navbar {
@@ -22,7 +22,7 @@ body{
     color: #ebebeb;
 }
 
-.navbar-brand{
+.navbar-brand {
     align-items: center;
 }
 
@@ -31,13 +31,17 @@ body{
     color: #ebebeb;
 }
 
-h1{
+#logoconquer {
+    max-width: 40%;
+}
+
+h1 {
     text-align: center;
     font-weight: 800;
     color: #333;
 }
 
-.card-text{
+.card-text {
     font-weight: 600;
     font-size: 1rem;
 }
@@ -65,18 +69,30 @@ h1{
     font-weight: 800;
 }
 
+
+
 .card {
     display: flex;
     text-align: center;
     padding-bottom: 1rem;
     margin-top: 2rem;
     margin-bottom: 5rem;
+    align-items: center;
+    align-content: center;
 }
 
-.card-title{
+.card-title {
     font-weight: 800;
     font-size: 2rem;
+    align-items: center;
+    align-content: center;
+}
 
+img.card-img-top-icon {
+    max-width: 10%;
+    align-items: center;
+    align-content: center;
+    margin-top: 1rem;
 }
 
 /*Footer*/
@@ -86,7 +102,7 @@ footer {
     padding: 40px 0;
 }
 
-.footer-social i{
+.footer-social i {
     color: #ebebeb;
 
 }
