--- a/css/hombres.css
+++ b/css/hombres.css
@@ -31,6 +31,10 @@ body{
     color: #ebebeb;
 }
 
+#logoconquer {
+    max-width: 40%;
+}
+
 #seccionhombres{
     text-align: center;
     font-weight: 800;
