--- a/css/mujeres.css
+++ b/css/mujeres.css
@@ -31,6 +31,10 @@ body {
     color: #ebebeb;
 }
 
+#logoconquer {
+    max-width: 40%;
+}
+
 h1 {
     text-align: center;
     font-weight: 800;
@@ -81,12 +85,21 @@ h1 {
     padding-bottom: 1rem;
     margin-top: 2rem;
     margin-bottom: 5rem;
+    align-items: center;
+    align-content: center;
 }
 
 .card-title {
     font-weight: 800;
     font-size: 2rem;
 
+}
+
+img.card-img-top-icon {
+    max-width: 10%;
+    align-items: center;
+    align-content: center;
+    margin-top: 1rem;
 }
 
 /*Footer*/
